adapted to software updates

--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -187,8 +187,8 @@ Bisectors in the sense of medial axes are now defined in the most general form a
 embedded in a given vector space $V$ without the sites themselves which are closest to two (or more) 
 sites under a given metric \cite[p. 244]{Cazals2006}.
 
-For the cases considered in this work, the medial axes coincide with the so-called \textit{topological skeleton curves} 
-\cite{wiki_skeleton, wiki_medial2}, which are the curves obtained from the centre positions of all possible maximal 
+For the cases considered in this work, the medial axes coincide with the so-called \textit{topological 1-skeletons} 
+\cite{wiki_skeleton, wiki_nskeleton, wiki_medial2} \cite[p. 169]{Berg2008}, which comprise the curves obtained from the centre positions of all possible maximal 
 spheres on the hypersurface $S$; this is explained in detail and with more mathematical rigor in the work by 
 Cazals and Giesen \cite[pp. 246f]{Cazals2006}.
 As we will be interested in these skeletons for the mesh-building step of our path-finding algorithm in the next
