--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -857,6 +857,17 @@
 
 @misc
 {
+	wiki_nskeleton,
+	author = {{Wikipedia contributors}},
+	title = {{N-skeleton --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=N-skeleton&oldid=849461568",
+	note = "[Online; accessed 20-September-2021]"
+}
+
+
+@misc
+{
 	wiki_proj,
 	author = {{Wikipedia contributors}},
 	title = {{Lot (Mathematik) --- Wikipedia{,} Die freie Enzyklop\"adie}},
