continued with code chapter

--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -74,6 +74,11 @@ The layout of the software's source code archive is shown in table \ref{tab:sour
 	\label{tab:sourcelayout}
 \end{table}
 
+Development of the geometry library under \lstinline|./src/libs| and the auxiliary tools under \lstinline|./src/tools| 
+was already started in 2020, as preparation for the exam in Algorithmic Geometry. 
+The library and tools were then further developed for this work, their separate code repository is available under 
+\url{https://github.com/t-weber/geo}, the software is furthermore registered under the DOI 
+\href{https://doi.org/10.5281/zenodo.4297475}{10.5281/zenodo.4297475}.
 
 
 \paragraph{Thesis source code}
