--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -59,10 +59,9 @@ The layout of the software's source code archive is shown in table \ref{tab:sour
 		cmake/ & & Modules for the \textit{CMake} \cite{TODO} build system. & \tabularnewline
 		\hline
 		setup/ & & Compile and setup scripts for... & \tabularnewline
-		\hline
 		           & osx/ & ... \textit{MacOS}, & \tabularnewline
 		           & deb/ & ... \textit{GNU/Linux}, mainly \textit{Ubuntu}, & \tabularnewline
-		           & mingw/ & ... \textit{MinGW}. & \tabularnewline
+		           & mingw/ & ... \textit{MinGW} \cite{web_mingw64}. & \tabularnewline
 		\hline
 		tlibs2/ & & Mathematical template library developed  & \cite{Takin2016, Takin2017, Takin2021, DiplomaWeber, PhDWeber} \tabularnewline
 		           & & during my physics diploma and PhD thesis. & \tabularnewline
