--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1416,6 +1416,18 @@
 
 @misc
 {
+	web_mingw64,
+	title = {{Mingw-w64 (Software)}},
+	author = {{Various Authors}},
+	year = {2021},
+	url = "https://www.mingw-w64.org/",
+	github = "https://github.com/mingw-w64/mingw-w64",
+	note = "[Online; accessed 23-September-2021]",
+}
+
+
+@misc
+{
 	web_Qt,
 	title = {{Qt (Software)}},
 	author = {{The Qt Company}},
