continued with motion planning

--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -56,7 +56,7 @@ The layout of the software's source code archive is shown in table \ref{tab:sour
 		\hline
 		res/ & & Resource files, e.g. shader scripts. & \tabularnewline
 		\hline
-		cmake/ & & Modules for the \textit{CMake} \cite{TODO} build system. & \tabularnewline
+		cmake/ & & Modules for the \textit{CMake} \cite{Martin2007, web_cmake} build system. & \tabularnewline
 		\hline
 		setup/ & & Compile and setup scripts for... & \tabularnewline
 		           & osx/ & ... \textit{MacOS}, & \tabularnewline
