--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -668,6 +668,21 @@
 }
 
 
+@article
+{
+	Martin2007,
+	author = {Martin, Ken and Hoffman, Bill},
+	title = {{An Open Source Approach to Developing Software in a Small Organization}},
+	journal = {IEEE Software}, 
+	issn = {1937-4194},
+	year = {2007},
+	volume = {24},
+	number = {1},
+	pages = {46-53},
+	doi = {10.1109/MS.2007.5},
+}
+
+
 @inproceedings
 {
 	Karavelas2004,
@@ -1428,6 +1443,18 @@
 
 @misc
 {
+	web_cmake,
+	title = {{CMake (Software)}},
+	author = {{Kitware, Inc.}},
+	year = {2000 - 2021},
+	url = "https://cmake.org/",
+	github = "https://github.com/Kitware/CMake",
+	note = "[Online; accessed 24-September-2021]",
+}
+
+
+@misc
+{
 	web_Qt,
 	title = {{Qt (Software)}},
 	author = {{The Qt Company}},
@@ -1684,6 +1711,18 @@
 	year = {1994-2020},
 	url = "https://www.gnu.org/software/coreutils/manual/html_node/sha2-utilities#sha2-utilities",
 	note = "[Online; accessed 13-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch2,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 2: Bug Algorithms (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2010},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap2-Bug-Alg_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
 }
 
 
