--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -17,7 +17,41 @@ Here, the descriptions remain ``high level'', the details and the implementation
 of the algorithm will be presented in the next chapter.
 
 Before looking at the situation with TAS in section \ref{sec:tasrobot}, we shortly 
-review the ideas of motion planning for a point-like robot in section \ref{sec:pointrobot}.
+review motion planning in general (section \ref{sec:motionplanning}) and the ideas of
+motion planning for a point-like robot (section \ref{sec:pointrobot}).
+
+
+\section{Motion planning in general}
+\label{sec:motionplanning}
+Motion planning strategies for a robot vary strongly depending on the amount of
+information the robot has at its disposal. A review of several different algorithms
+for path-finding without full information is given in Ref \cite[Ch. 7, pp. 313-366]{FUH_geo2020},
+which we follow in this section.
+
+The simplest possible case is a robot equipped with just a sense of its relative
+angular direction and a contact switch which is activated when touching an obstacle,
+i.e. a basic robotic vacuum cleaner.
+Such a robot is capable of finding a path out of a maze using the Pledge algorithm,
+which consists of noting the angle of an initially arbitrary direction, repeatedly
+moving along that direction until an obstacle is hit, and then moving parallel to the
+obstacle's faces as long as the accumulated angle is not at its initial value,
+e.g. 0 degrees, again \cite[Ch. 7.2, pp. 316-322]{FUH_geo2020}.
+
+If -- aside from the tactile sensor and the angular sense -- the robot also knows
+its current position relative to the target point, it can execute a bug algorithm
+to reach its target, which is based on the movement of insects.
+Several of these algorithms exist \cite{Choset2010_ch2}, and the basic idea consists
+of moving in the direction of the target, fully circling a potential obstacle in the way,
+returning to the obstacle's point of closest distance to the target and repeating
+\cite[Ch. 7.3.1, pp. 323-326]{FUH_geo2020}.
+
+In difference to these case studies, the robot arm in question in this work --
+the triple-axis spectrometer -- has full information of its surroundings.
+The geometry of the instrument, the position of all obstacles, as well
+as the angular limits of the instrument's joints are perfectly known.
+Several approaches exist for such a case, and here it is possible to calculate
+an optimal path under given conditions and constraints.
+We continue to review such strategies in the following sections.
 
 
 
@@ -305,7 +339,9 @@ The two tasks comprise these following steps:
 			will be employed to get a path with minimum edge weights.
 			It is the obvious choice, as Dijkstra's algorithm or an algorithm based 
 			on it are commonly used in literature \cite{Hwang2003, Singal2014} 
-			for such a task.
+			for such a task. Motion planning based on representing visible regions
+			as a graph and using Dijkstra's algorithm for finding the shortest path
+			is also discussed in Ref. \cite[Ch. 7, p. 313]{FUH_geo2020}.
 		\item Move the instrument from the edge of the Voronoi region containing 
 			the end point towards that point.
 	\end{enumerate}
