--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -685,6 +685,22 @@
 
 @inproceedings
 {
+	Icking1995,
+	author = {Christian Icking and Rolf Klein},
+	title = {{Searching for the Kernel of a Polygon -- A Competitive Strategy}},
+	booktitle = {{SCG '95: Proceedings of the eleventh annual symposium on Computational geometry}}, 
+	issn = {},
+	year = {1995},
+	month = {September},
+	volume = {},
+	number = {},
+	pages = {258-266},
+	doi = {10.1145/220279.220307},
+}
+
+
+@inproceedings
+{
 	Karavelas2004,
 	title = {{A robust and efficient implementation for the segment Voronoi diagram}},
 	author = {Karavelas, Menelaos I},
@@ -710,6 +726,18 @@
 	month = {March 27-29},
 	address = {Delphi, Greece},
 	url = {http://users.math.uoc.gr/~mkaravel/files/papers/vda-ewcg06.pdf},
+}
+
+
+@incollection
+{
+	Biswas2012,
+	title = {{Depth camera based indoor mobile robot localization and navigation}},
+	author = {Biswas, Joydeep and Veloso, Manuela},
+	booktitle = {2012 IEEE International Conference on Robotics and Automation},
+	year = {2012},
+	pages = {1697-1702},
+	doi = {10.1109/ICRA.2012.6224766}
 }
 
 
@@ -1432,7 +1460,7 @@
 @misc
 {
 	web_mingw64,
-	title = {{Mingw-w64 (Software)}},
+	title = {{MinGW-w64 -- Minimalist GNU for Windows (Software)}},
 	author = {{Various Authors}},
 	year = {2021},
 	url = "https://www.mingw-w64.org/",
@@ -1716,12 +1744,108 @@
 
 @misc
 {
+	Choset2010_ch1,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 1 (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap1-Introduction_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
 	Choset2010_ch2,
 	author = {Howie Choset},
 	title = {{Robotic Motion Planning Lectures --- Chapter 2: Bug Algorithms (Lecture Notes)}},
 	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
 	year = {2010},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap2-Bug-Alg_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch3,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 3: Configuration Space (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap3-Config-Space_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch4,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 4: Potential Functions (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap4-Potential-Field_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch5,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 5: Roadmap Methods (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap5-RoadMap-Methods_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch6,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 6: Cell Decomposition (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap6-CellDecomp_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch7,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 7: Sample-Based Motion Planning (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap7-Prob-Planning_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch8,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 8: Localization, Mapping, SLAM and The Kalman Filter according to George (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap8-Kalman-Mapping_howie.pdf},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
+	Choset2010_ch9,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures --- Chapter 9: Bayesian Approaches to Localization, Mapping, and SLAM (Lecture Notes)}},
+	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap9-Bayesian-Mapping_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
 }
 
