--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -8,16 +8,21 @@
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
 
-\begin{itemize}
-	\item {\bf still TODO}
-	\item ...
-	\item Yannick Le Goc and instrument control group
-	\item Dr. Paolo Mutti and computing group
-	\item Dr. Martin B\"ohm and spectroscopy group
-	\item Dr. Paul Steffens
-	\item thesis advisors: Dr. Lihong Ma and Prof. Dr. Christian Icking
-	\item also thank advisors for former (physics) theses
-	\item family
-	\item ...
-\end{itemize}
+I wish to thank my thesis advisors, Prof. Dr. Christian Icking and Dr. Lihong Ma, for accepting 
+and supporting this project, for their advice and our regular discussions, the friendly atmosphere, 
+as well as for always being available for questions.
 
+Equal thanks to Dr. Martin B\"ohm, leader of the spectroscopy group at the ILL and instrument 
+scientist at the Thales spectrometer, to Yannick Le Goc (computer scientist at the instrument 
+control and electronics group), as well as Dr. Paul Steffens (Thales instrument scientist) for our 
+regular discussions about about various triple-axis automatisation projects, the experiments and the
+instrumental aspects. I furthermore wish to thank Jérôme Locatelli (instrument control group) for
+all the help with \textit{Nomad}, the instrument control system at the ILL, and the technical discussions
+about its internal details. 
+Thanks to Dr. Paolo Mutti, the head of both the scientific computing and the instrument control group 
+at the ILL, for supporting this project and for the great atmosphere and working environment there.
+
+Also not to forget the continuing support from my former advisor for past theses, Prof. Dr. Peter B\"oni,
+as well as from Prof. Dr. Christian Pfleiderer, Prof. Dr. Markus Garst, Dr. Marc Janoschek in all our ongoing projects.
+
+Last but not least also many thanks to my family and to Soilhat for always being there for me!
