--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -92,7 +92,7 @@ polygonal regions into convex sub-regions that is used in building the path mesh
 Fig. \ref{fig:polygui} (a) shows a screenshot of a test run of the algorithm on a much simpler
 polygonal region than what is calculated in the main program. The polygonal splitting algorithm 
 itself is based on the description from Ref. \cite{Hegazy2014}.
-Another function of the tool is the calculation of the visibility kernel \cite{TODO} of a 
+Another function of the tool is the calculation of the visibility kernel \cite[Ch. 3.3, p. 141]{FUH_geo2020} of a
 polygonal region, see Fig. \ref{fig:polygui} (b).
 
 
