--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1061,6 +1061,17 @@
 
 @misc
 {
+	cppwiki_concepts,
+	author = "{Cppreference.com contributors}",
+	title = {{Constraints and concepts --- C++ reference}},
+	year = "2021",
+	url = "https://en.cppreference.com/mwiki/index.php?title=cpp/language/constraints&oldid=132793",
+	note = "[Online; accessed 25-September-2021]"
+}
+
+
+@misc
+{
 	web_aabb,
 	author = {{Mozilla Developer Network Web Docs}},
 	title = {{3D collision detection}},
@@ -1446,6 +1457,17 @@
 
 @misc
 {
+	web_NOMAD3d,
+	title = {{NOMAD 3D (Software)}},
+	author = {{ILL Instrument Control Group}},
+	year = {2021},
+	url = "https://code.ill.fr/instrument-control/protos/nomad-3d",
+	note = "[Online; accessed 25-September-2021]",
+}
+
+
+@misc
+{
 	web_NICOS,
 	title = {{NICOS, Networked Instrument Control System (Software)}},
 	author = {Georg Brandl and Enrico Faulhaber and Christian Felder and Jens Kr\"uger and Alexander Lenz and Bj\"orn Pedersen},
@@ -1718,6 +1740,16 @@
 	year = {1995-2001},
 	url = "https://www.opengl.org/archives/resources/code/samples/bspfaq/index.html",
 	note = "[Online; accessed 11-September-2021]"
+}
+
+
+@misc
+{
+	ThalesModel2021,
+	author = {{Bureau D'Etudes, Institut Laue-Langevin}},
+	title = {{CAD model of the ThALES \cite{thales} spectrometer}},
+	year = {2021},
+	note = "[personal communication, 2021]"
 }
 
 
