--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -17,7 +17,7 @@ scientist at the Thales spectrometer, to Yannick Le Goc (computer scientist at t
 control and electronics group), as well as Dr. Paul Steffens (Thales instrument scientist) for our 
 regular discussions about about various triple-axis automatisation projects, the experiments and the
 instrumental aspects. I furthermore wish to thank Jérôme Locatelli (instrument control group) for
-all the help with \textit{Nomad}, the instrument control system at the ILL, and the technical discussions
+all the help with \textit{NOMAD}, the instrument control system at the ILL, and the technical discussions
 about its internal details. 
 Thanks to Dr. Paolo Mutti, the head of both the scientific computing and the instrument control group 
 at the ILL, for supporting this project and for the great atmosphere and working environment there.
