--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -15,7 +15,7 @@ as well as for always being available for questions.
 Equal thanks to Dr. Martin B\"ohm, leader of the spectroscopy group at the ILL and instrument 
 scientist at the Thales spectrometer, to Yannick Le Goc (computer scientist at the instrument 
 control and electronics group), as well as Dr. Paul Steffens (Thales instrument scientist) for our 
-regular discussions about about various triple-axis automatisation projects, the experiments and the
+regular discussions about various triple-axis automatisation projects, our experiments and the
 instrumental aspects. I furthermore wish to thank Jérôme Locatelli (instrument control group) for
 all the help with \textit{NOMAD}, the instrument control system at the ILL, and the technical discussions
 about its internal details. 
@@ -23,6 +23,6 @@ Thanks to Dr. Paolo Mutti, the head of both the scientific computing and the ins
 at the ILL, for supporting this project and for the great atmosphere and working environment there.
 
 Also not to forget the continuing support from my former advisor for past theses, Prof. Dr. Peter B\"oni,
-as well as from Prof. Dr. Christian Pfleiderer, Prof. Dr. Markus Garst, Dr. Marc Janoschek in all our ongoing projects.
+as well as from Prof. Dr. Christian Pfleiderer, Prof. Dr. Markus Garst, and Dr. Marc Janoschek in all our ongoing projects.
 
 Last but not least also many thanks to my family and to Soilhat for always being there for me!
