--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -95,7 +95,7 @@ source repository, see chapter \ref{ch:online} for more information.
 \end{figure}
 
 The functions of the individual control elements of the main GUI, which are marked as (a)-(f)
-in fig. \ref{fig:gui}, are explained in the following sections. Each of the panels corresponds to a specific
+in Fig. \ref{fig:gui}, are explained in the following sections. Each of the panels corresponds to a specific
 functionality of the core module (chapter \ref{ch:impl}), to which all calculations are delegated. 
 This way, the GUI is literally just an interface.
 By the same token, the core module itself is completely independent of the GUI, or any other
