--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -214,7 +214,7 @@ gained significant traction, with first autonomous experiments being attempted a
 
 As part of the current drive towards autonomous experimentation at the ILL, the goal of the present work is the design
 and implementation of a software tool which enable an automatic path-finding for TAS instruments. Path-finding
-is necessary for the instrument to circumvent obstacles in its way.
+is necessary for the instrument to circumvent obstacles in its way and for safe, collision-free movement close to walls.
 Currently, this task has to be performed by the instrument scientists before each new scan series in a time-consuming fashion.
 The current approach requires the instrument to be driven along the programmed scan path, but without measuring and with
 the neutron beam from the reactor closed.
@@ -226,7 +226,7 @@ of the axes would pull out a cable or tube.
 
 \section{Summary}
 
-This chapter provided a short overview over neutron physics and the types of instrument typically used at research
+This chapter provided a short glance at neutron physics and the types of instrument typically used at research
 reactors, with special emphasis on the triple-axis spectrometer. The complexity of the movement of these kind of
 instruments necessitate the use of a path-finding system for a more effective set-up of measurements.
 In the next chapter, we will introduce the coordinate systems used in crystallography and at TAS instruments,
