started with case study

--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -307,7 +307,55 @@ The library \textit{QCustomPlot} \cite{web_QCustomPlot} is used for plotting.
 
 
 \subsection{Typical workflow}
-TODO
+\begin{figure}[htb]
+		\begin{center}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_15_15_05_10meV}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_15_15_05_10meV_cfg}
+			\vspace{0.2cm}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_2_2_0_0meV}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_2_2_0_0meV_cfg}
+			\vspace{0.2cm}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_2_2_0_10meV}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_2_2_0_10meV_cfg}
+		\end{center}
+	\caption[Case study: Start and target position.]{
+		\label{fig:casestudy_start_target}}
+\end{figure}
+
+\begin{figure}[htb]
+		\begin{center}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_15_15_05_10meV}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_path}
+			\vspace{0.2cm}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_step1}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_step1_cfg}
+			\vspace{0.2cm}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_step2}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_step2_cfg}
+		\end{center}
+	\caption[Case study: Path 1/2.]{
+		\label{fig:casestudy_sequence1}}
+\end{figure}
+
+\begin{figure}[htb]
+		\begin{center}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_step3}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_step3_cfg}
+			\vspace{0.2cm}
+			\includegraphics[width = 0.4 \textwidth]{figures/casestudy_2_2_0_0meV}
+			\hspace{0.5cm}
+			\includegraphics[width = 0.55 \textwidth]{figures/casestudy_2_2_0_0meV_cfg}
+		\end{center}
+	\caption[Case study: Path 2/2.]{
+		\label{fig:casestudy_sequence2}}
+\end{figure}
 
 
 
